# saftybox

./: 04-safety-case.md  README.md
01-platform-hardware/: README.md  design-and-layout-notes.md  failsafe-design-options.md  timer-ok-bringup-plan.md
01-platform-hardware/datasheets/: review.md
02-protocol/: README.md  slides.html  standards-comparison.md  threat-analysis.md
03-ux/: README.md  description-of-operation.md  panel-sketch.html
archive/: DESIGN.md
firmware/timer_test/lib/FailsafeSupervisor/: FailsafeSupervisor.cpp  FailsafeSupervisor.h
firmware/timer_test/lib/SafetyChannel/: SafetyChannel.cpp  SafetyChannel.h
firmware/timer_test/src/: main.cpp
simulator/: .gitignore  CMakeLists.txt  key_file.h
simulator/home_app/: main.cpp  panel.cpp  panel.h  sim_home_hal.cpp  sim_home_hal.h
simulator/lib/: home_node.cpp  home_node.h  mac.cpp  mac.h  nonce_buf.cpp  nonce_buf.h  packet.cpp  packet.h  platform_node.cpp  platform_node.h  protocol_defs.h
simulator/lib/hal/: home_hal.h  platform_hal.h
simulator/platform_sim/: main.cpp  sim_platform_hal.cpp  sim_platform_hal.h
simulator/tests/: run_tests.sh  test_home_node.cpp  test_integration.cpp  test_mac.cpp  test_nonce_buf.cpp  test_packet.cpp  test_platform_node.cpp  test_util.h
simulator/tools/: keygen.cpp
